--- a/podcast.html
+++ b/podcast.html
@@ -3,7 +3,7 @@
 
     <div>
         <audio controls>
-            <source src="Open C string.ogg" type="audio/mpeg">
+            <source src="Podcast Project - Ben Cantrell.mp3" type="audio/mpeg">
         </audio>
     </div>
 </html>
